Bug 62665 - SLIDESHOW start slide setting ignored
Summary: SLIDESHOW start slide setting ignored
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: mhofmann
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-23 12:20 UTC by mhofmann
Modified: 2013-03-24 00:16 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mhofmann 2013-03-23 12:20:37 UTC
You can specify a fix start slide under slide show -> slide show settings.

When the selected start slide is before the current slide the presentation is started at the current slide.

Expected behavior: the presentation is started at the fix start slide.


When the start slide is after the current slide the presentation starts as expected with the choosen start slide.
Comment 1 A (Andy) 2013-03-23 18:08:43 UTC
reproducible with LO 4.0.1.2 (Win7 Home, 64bit)
Comment 2 mhofmann 2013-03-24 00:16:23 UTC
fixed with commit e8b924e440a8f82076389d2774d1c414c87924dc