fdo#62665 always consider slide show settings

Change-Id: I710e17a36d43dffc6b625ab0f6b2156e498d3d8c